Add bearer auth to protected routes in swagger
